--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "papaparse": "^5.3.0",
     "prettier": "^2.1.1",
+    "prettier-webpack-plugin": "^1.2.0",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "style-loader": "^1.3.0",
